app/font/gramatica01/ACMulticapa01Parser.py
# Generated from ACMulticapa01.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ACMulticapa01Parser ( Parser ):

    grammarFileName = "ACMulticapa01.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'GRAMATICA:'", "'PASOS:'", "'DURACION ESTADOS'", 
                     "'{'", "'}'", "'CAPA'", "'CELDA'", "'('", "')'", "'SUSCEPTIBLE'", 
                     "'EXPUESTO'", "'INFECTADO'", "'RECUPERADO'", "'MUERTO'", 
                     "'TRANSICIONES POR VECINOS'", "'REGLA'", "'->'", "'SI'", 
                     "'TRANSICIONES POR DURACION'", "'HAY'", "'VECINOS'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "STRING", "NUMBER", "WS" ]

    RULE_program = 0
    RULE_ignoredLines = 1
    RULE_grammarChoice = 2
    RULE_stepsChoice = 3
    RULE_durationStandard = 4
    RULE_durationState = 5
    RULE_layer = 6
    RULE_cell = 7
    RULE_basicState = 8
    RULE_transitions = 9
    RULE_neighborTransitions = 10
    RULE_neighborTransitionRule = 11
    RULE_durationTransitions = 12
    RULE_durationTransitionRule = 13
    RULE_condition = 14

    ruleNames =  [ "program", "ignoredLines", "grammarChoice", "stepsChoice", 
                   "durationStandard", "durationState", "layer", "cell", 
                   "basicState", "transitions", "neighborTransitions", "neighborTransitionRule", 
                   "durationTransitions", "durationTransitionRule", "condition" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    STRING=22
    NUMBER=23
    WS=24

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ACMulticapa01Parser.EOF, 0)

        def ignoredLines(self):
            return self.getTypedRuleContext(ACMulticapa01Parser.IgnoredLinesContext,0)


        def durationStandard(self):
            return self.getTypedRuleContext(ACMulticapa01Parser.DurationStandardContext,0)


        def layer(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ACMulticapa01Parser.LayerContext)
            else:
                return self.getTypedRuleContext(ACMulticapa01Parser.LayerContext,i)


        def transitions(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ACMulticapa01Parser.TransitionsContext)
            else:
                return self.getTypedRuleContext(ACMulticapa01Parser.TransitionsContext,i)


        def getRuleIndex(self):
            return ACMulticapa01Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = ACMulticapa01Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 30
                self.ignoredLines()


            self.state = 34
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 33
                self.durationStandard()


            self.state = 37 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 36
                self.layer()
                self.state = 39 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==6):
                    break

            self.state = 44
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15 or _la==19:
                self.state = 41
                self.transitions()
                self.state = 46
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 47
            self.match(ACMulticapa01Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IgnoredLinesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def grammarChoice(self):
            return self.getTypedRuleContext(ACMulticapa01Parser.GrammarChoiceContext,0)


        def stepsChoice(self):
            return self.getTypedRuleContext(ACMulticapa01Parser.StepsChoiceContext,0)


        def getRuleIndex(self):
            return ACMulticapa01Parser.RULE_ignoredLines

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIgnoredLines" ):
                return visitor.visitIgnoredLines(self)
            else:
                return visitor.visitChildren(self)




    def ignoredLines(self):

        localctx = ACMulticapa01Parser.IgnoredLinesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_ignoredLines)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.grammarChoice()
            self.state = 50
            self.stepsChoice()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GrammarChoiceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(ACMulticapa01Parser.NUMBER, 0)

        def getRuleIndex(self):
            return ACMulticapa01Parser.RULE_grammarChoice

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGrammarChoice" ):
                return visitor.visitGrammarChoice(self)
            else:
                return visitor.visitChildren(self)




    def grammarChoice(self):

        localctx = ACMulticapa01Parser.GrammarChoiceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_grammarChoice)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.match(ACMulticapa01Parser.T__0)
            self.state = 53
            self.match(ACMulticapa01Parser.NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StepsChoiceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(ACMulticapa01Parser.NUMBER, 0)

        def getRuleIndex(self):
            return ACMulticapa01Parser.RULE_stepsChoice

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStepsChoice" ):
                return visitor.visitStepsChoice(self)
            else:
                return visitor.visitChildren(self)




    def stepsChoice(self):

        localctx = ACMulticapa01Parser.StepsChoiceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_stepsChoice)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.match(ACMulticapa01Parser.T__1)
            self.state = 56
            self.match(ACMulticapa01Parser.NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DurationStandardContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def durationState(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ACMulticapa01Parser.DurationStateContext)
            else:
                return self.getTypedRuleContext(ACMulticapa01Parser.DurationStateContext,i)


        def getRuleIndex(self):
            return ACMulticapa01Parser.RULE_durationStandard

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDurationStandard" ):
                return visitor.visitDurationStandard(self)
            else:
                return visitor.visitChildren(self)




    def durationStandard(self):

        localctx = ACMulticapa01Parser.DurationStandardContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_durationStandard)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(ACMulticapa01Parser.T__2)
            self.state = 59
            self.match(ACMulticapa01Parser.T__3)
            self.state = 61 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 60
                self.durationState()
                self.state = 63 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 31744) != 0)):
                    break

            self.state = 65
            self.match(ACMulticapa01Parser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DurationStateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def basicState(self):
            return self.getTypedRuleContext(ACMulticapa01Parser.BasicStateContext,0)


        def NUMBER(self):
            return self.getToken(ACMulticapa01Parser.NUMBER, 0)

        def getRuleIndex(self):
            return ACMulticapa01Parser.RULE_durationState

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDurationState" ):
                return visitor.visitDurationState(self)
            else:
                return visitor.visitChildren(self)




    def durationState(self):

        localctx = ACMulticapa01Parser.DurationStateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_durationState)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.basicState()
            self.state = 68
            self.match(ACMulticapa01Parser.NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LayerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(ACMulticapa01Parser.NUMBER, 0)

        def cell(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ACMulticapa01Parser.CellContext)
            else:
                return self.getTypedRuleContext(ACMulticapa01Parser.CellContext,i)


        def getRuleIndex(self):
            return ACMulticapa01Parser.RULE_layer

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLayer" ):
                return visitor.visitLayer(self)
            else:
                return visitor.visitChildren(self)




    def layer(self):

        localctx = ACMulticapa01Parser.LayerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_layer)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(ACMulticapa01Parser.T__5)
            self.state = 71
            self.match(ACMulticapa01Parser.NUMBER)
            self.state = 72
            self.match(ACMulticapa01Parser.T__3)
            self.state = 74 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 73
                self.cell()
                self.state = 76 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==7):
                    break

            self.state = 78
            self.match(ACMulticapa01Parser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CellContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(ACMulticapa01Parser.NUMBER, 0)

        def basicState(self):
            return self.getTypedRuleContext(ACMulticapa01Parser.BasicStateContext,0)


        def getRuleIndex(self):
            return ACMulticapa01Parser.RULE_cell

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCell" ):
                return visitor.visitCell(self)
            else:
                return visitor.visitChildren(self)




    def cell(self):

        localctx = ACMulticapa01Parser.CellContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_cell)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(ACMulticapa01Parser.T__6)
            self.state = 81
            self.match(ACMulticapa01Parser.NUMBER)
            self.state = 82
            self.match(ACMulticapa01Parser.T__7)
            self.state = 83
            self.basicState()
            self.state = 84
            self.match(ACMulticapa01Parser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BasicStateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ACMulticapa01Parser.RULE_basicState

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBasicState" ):
                return visitor.visitBasicState(self)
            else:
                return visitor.visitChildren(self)




    def basicState(self):

        localctx = ACMulticapa01Parser.BasicStateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_basicState)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 31744) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TransitionsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def neighborTransitions(self):
            return self.getTypedRuleContext(ACMulticapa01Parser.NeighborTransitionsContext,0)


        def durationTransitions(self):
            return self.getTypedRuleContext(ACMulticapa01Parser.DurationTransitionsContext,0)


        def getRuleIndex(self):
            return ACMulticapa01Parser.RULE_transitions

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTransitions" ):
                return visitor.visitTransitions(self)
            else:
                return visitor.visitChildren(self)




    def transitions(self):

        localctx = ACMulticapa01Parser.TransitionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_transitions)
        try:
            self.state = 90
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [15]:
                self.enterOuterAlt(localctx, 1)
                self.state = 88
                self.neighborTransitions()
                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 2)
                self.state = 89
                self.durationTransitions()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NeighborTransitionsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def neighborTransitionRule(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ACMulticapa01Parser.NeighborTransitionRuleContext)
            else:
                return self.getTypedRuleContext(ACMulticapa01Parser.NeighborTransitionRuleContext,i)


        def getRuleIndex(self):
            return ACMulticapa01Parser.RULE_neighborTransitions

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNeighborTransitions" ):
                return visitor.visitNeighborTransitions(self)
            else:
                return visitor.visitChildren(self)




    def neighborTransitions(self):

        localctx = ACMulticapa01Parser.NeighborTransitionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_neighborTransitions)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(ACMulticapa01Parser.T__14)
            self.state = 93
            self.match(ACMulticapa01Parser.T__3)
            self.state = 95 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 94
                self.neighborTransitionRule()
                self.state = 97 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==16):
                    break

            self.state = 99
            self.match(ACMulticapa01Parser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NeighborTransitionRuleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def basicState(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ACMulticapa01Parser.BasicStateContext)
            else:
                return self.getTypedRuleContext(ACMulticapa01Parser.BasicStateContext,i)


        def condition(self):
            return self.getTypedRuleContext(ACMulticapa01Parser.ConditionContext,0)


        def getRuleIndex(self):
            return ACMulticapa01Parser.RULE_neighborTransitionRule

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNeighborTransitionRule" ):
                return visitor.visitNeighborTransitionRule(self)
            else:
                return visitor.visitChildren(self)




    def neighborTransitionRule(self):

        localctx = ACMulticapa01Parser.NeighborTransitionRuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_neighborTransitionRule)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(ACMulticapa01Parser.T__15)
            self.state = 102
            self.basicState()
            self.state = 103
            self.match(ACMulticapa01Parser.T__16)
            self.state = 104
            self.basicState()
            self.state = 105
            self.match(ACMulticapa01Parser.T__17)
            self.state = 106
            self.condition()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DurationTransitionsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def durationTransitionRule(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ACMulticapa01Parser.DurationTransitionRuleContext)
            else:
                return self.getTypedRuleContext(ACMulticapa01Parser.DurationTransitionRuleContext,i)


        def getRuleIndex(self):
            return ACMulticapa01Parser.RULE_durationTransitions

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDurationTransitions" ):
                return visitor.visitDurationTransitions(self)
            else:
                return visitor.visitChildren(self)




    def durationTransitions(self):

        localctx = ACMulticapa01Parser.DurationTransitionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_durationTransitions)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(ACMulticapa01Parser.T__18)
            self.state = 109
            self.match(ACMulticapa01Parser.T__3)
            self.state = 111 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 110
                self.durationTransitionRule()
                self.state = 113 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 31744) != 0)):
                    break

            self.state = 115
            self.match(ACMulticapa01Parser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DurationTransitionRuleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def basicState(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ACMulticapa01Parser.BasicStateContext)
            else:
                return self.getTypedRuleContext(ACMulticapa01Parser.BasicStateContext,i)


        def getRuleIndex(self):
            return ACMulticapa01Parser.RULE_durationTransitionRule

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDurationTransitionRule" ):
                return visitor.visitDurationTransitionRule(self)
            else:
                return visitor.visitChildren(self)




    def durationTransitionRule(self):

        localctx = ACMulticapa01Parser.DurationTransitionRuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_durationTransitionRule)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.basicState()
            self.state = 118
            self.match(ACMulticapa01Parser.T__16)
            self.state = 119
            self.basicState()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(ACMulticapa01Parser.NUMBER, 0)

        def basicState(self):
            return self.getTypedRuleContext(ACMulticapa01Parser.BasicStateContext,0)


        def getRuleIndex(self):
            return ACMulticapa01Parser.RULE_condition

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondition" ):
                return visitor.visitCondition(self)
            else:
                return visitor.visitChildren(self)




    def condition(self):

        localctx = ACMulticapa01Parser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_condition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(ACMulticapa01Parser.T__19)
            self.state = 122
            self.match(ACMulticapa01Parser.NUMBER)
            self.state = 123
            self.match(ACMulticapa01Parser.T__20)
            self.state = 124
            self.basicState()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





